After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664747 - 'Set as wallpaper' doesn't always work.
'Set as wallpaper' doesn't always work.
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: general
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-24 17:31 UTC by Reda Lazri
Modified: 2012-01-18 19:13 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Reda Lazri 2011-11-24 17:31:01 UTC
The option to set an image as wallpaper doesn't work properly if eog-wallpaper.xxx was present in ~/.local/share/

As a workaround, I have to launch the 'background' settings and refresh Zoom >Tile >Zoom
Comment 1 Felix Riemann 2012-01-18 17:37:10 UTC
Okay, it took some time to debug this, but it looks like we get into conflict with the wallpaper cache (didn't know the desktop had that). At some point this compares the mtime of the cached file with the new file. Unfortunately copying with GIO seems to preserve the mtime. As the cached file has an mtime from the time it was created the new one will carry the mtime of the original picture which is likely older.

Hmm, will see if we can implement some touch-like functionality.
Comment 2 Felix Riemann 2012-01-18 19:13:25 UTC
commit 5b3d916f694433e99432329dab96cbb7e9da66a1
Author: Felix Riemann <>
Date:   Wed Jan 18 20:09:07 2012 +0100

    Update mtime when setting remote images as wallpaper
    
    Otherwise libgnome-desktop's wallpaper cache might not pick up the new
    background if a local copy already existed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=664747
---
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.