Update mtime when setting remote images as wallpaper

Otherwise libgnome-desktop's wallpaper cache might not pick up the new
background if a local copy already existed.

https://bugzilla.gnome.org/show_bug.cgi?id=664747